--- a/estilos-header-footer.css
+++ b/estilos-header-footer.css
@@ -358,6 +358,22 @@ body {
         width: 100%;
         left: 0;
     }
+
+    .title {
+        position: absolute;
+        top: 30%;
+        left: 20%;
+        right: 20%;
+        text-align: center;
+        background-size: 100%;
+        height: 250px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        color: #ffffff;
+        font-size: x-large;
+    }
 }
 
 #toggle:checked~.navigation {
