--- a/estilosreparacion.css
+++ b/estilosreparacion.css
@@ -13,7 +13,7 @@ body {
 /* * ============ MAIN ============ */
 /* * ============================== */
 
-main p {
+main h6 {
     position: absolute;
     top: 65%;
     left: 5%;
