--- a/estilosreparacion.css
+++ b/estilosreparacion.css
@@ -98,7 +98,7 @@ button:hover {
 
 @media screen and (max-width:850px) {
     .title h1{
-        font-size: 120%;
+        font-size: x-large;
     }
 }
 
@@ -106,6 +106,6 @@ button:hover {
 
 @media screen and (max-width:480px) {
     .title h1{
-        font-size: 120%;
+        font-size: x-large;
     }
 }
