--- a/estilosreparacion.css
+++ b/estilosreparacion.css
@@ -97,7 +97,7 @@ button:hover {
 /* * ====== TABLETS ========= */
 
 @media screen and (max-width:850px) {
-    .title h1{
+    .title {
         font-size: xx-large;
     }
 }
@@ -105,7 +105,7 @@ button:hover {
 /* * ====== SMARTPHONE ========= */
 
 @media screen and (max-width:480px) {
-    .title h1{
+    .title {
         font-size: xx-large;
     }
 }
